--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     }
 
     .topbar {
-        background-image: url("assets/imgs/back.jpg");
+        background-image: url("assets/imgs/back.png");
 
         height: 80%;
 
         background-position: center;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
 
     }
     @media only screen and (max-width: 1025px) {
